--- a/bilibili/webpack学习/04-配置Vue/package.json
+++ b/bilibili/webpack学习/04-配置Vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meetwebpack",
+  "name": "vue-package",
   "version": "1.0.0",
   "description": "· main.js 引用了 mathUtils.js 的模块，在 index.html 中引用 js 不能直接如下引用：",
   "main": "index.js",
@@ -9,16 +9,18 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "vue": "^2.6.10"
+  },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "style-loader": "^1.0.0",
-    "url-loader": "^2.2.0",
-    "webpack": "^3.6.0"
+    "vue-loader": "^13.0.0",
+    "vue-template-compiler": "^2.6.10"
   }
 }
