--- a/bilibili/webpack学习/04-配置Vue/package.json
+++ b/bilibili/webpack学习/04-配置Vue/package.json
@@ -17,10 +17,12 @@
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "style-loader": "^1.0.0",
     "vue-loader": "^13.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^3.6.0"
   }
 }
